--- a/package.json
+++ b/package.json
@@ -36,17 +36,18 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.3",
     "rollup": "^2.48.0",
     "rollup-plugin-babel": "^4.4.0"
   },
   "files": [
-    "dist",
-    "App.js",
-    "Document.js",
-    "Error.js"
+    "dist"
   ],
   "browserslist": [
     "> 1%",
