--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rextjs/builder",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "mingdev <mingdev@163.com>",
   "main": "./dist/Builder.js",
   "scripts": {
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "@babel/core": "^7.14.2",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
     "@rextjs/babel-plugin-auto-css-modules": "^1.0.0",
     "@rextjs/client-page": "^1.0.2",
-    "@rextjs/client-page-loader": "^1.0.0",
+    "@rextjs/client-page-loader": "^1.0.1",
     "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
     "consola": "^2.15.3",
     "css-loader": "^5.2.6",
     "events": "^3.3.0",
@@ -43,8 +47,7 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
-    "rollup": "^2.48.0",
-    "rollup-plugin-babel": "^4.4.0"
+    "rollup": "^2.48.0"
   },
   "files": [
     "dist"
