--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rextjs/builder",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "mingdev <mingdev@163.com>",
   "main": "./dist/Builder.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
+    "@hot-loader/react-dom": "^17.0.1",
     "@rextjs/babel-plugin-auto-css-modules": "^1.0.0",
     "@rextjs/client-page": "^1.0.3",
     "@rextjs/client-page-loader": "^1.0.2",
@@ -28,6 +29,7 @@
     "optimize-css-assets-webpack-plugin": "^6.0.0",
     "pify": "^5.0.0",
     "postcss-loader": "^4.3.0",
+    "react-hot-loader": "^4.13.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
