--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rextjs/builder",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "author": "mingdev <mingdev@163.com>",
   "main": "./dist/Builder.js",
   "scripts": {
@@ -9,6 +9,7 @@
   "dependencies": {
     "@babel/core": "^7.14.2",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
@@ -17,9 +18,12 @@
     "@rextjs/babel-plugin-auto-css-modules": "^1.0.0",
     "@rextjs/client-page": "^1.0.3",
     "@rextjs/client-page-loader": "^1.0.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "consola": "^2.15.3",
     "css-loader": "^5.2.6",
+    "eslint": "^7.6.0",
+    "eslint-loader": "^4.0.2",
     "eventsource-polyfill": "^0.9.6",
     "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
@@ -42,9 +46,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.3",
     "rollup": "^2.48.0"
